--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="wxhyihuan" />
 
 
-<meta name="date" content="2020-12-03" />
+<meta name="date" content="2020-12-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -98,7 +98,11 @@
 <li class="chapter" data-level="2.5.3" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#答题型"><i class="fa fa-check"></i><b>2.5.3</b> 答题型</a></li>
 </ul></li>
 <li class="chapter" data-level="2.6" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#问题解决型"><i class="fa fa-check"></i><b>2.6</b> 问题解决型</a></li>
-<li class="chapter" data-level="2.7" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#图表型作文"><i class="fa fa-check"></i><b>2.7</b> 图表型作文</a></li>
+<li class="chapter" data-level="2.7" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#图表型作文"><i class="fa fa-check"></i><b>2.7</b> 图表型作文</a><ul>
+<li class="chapter" data-level="2.7.1" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#模板"><i class="fa fa-check"></i><b>2.7.1</b> 模板</a></li>
+<li class="chapter" data-level="2.7.2" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#范文"><i class="fa fa-check"></i><b>2.7.2</b> 范文</a></li>
+<li class="chapter" data-level="2.7.3" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#常用句型"><i class="fa fa-check"></i><b>2.7.3</b> 常用句型</a></li>
+</ul></li>
 <li class="chapter" data-level="2.8" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#实用性写作"><i class="fa fa-check"></i><b>2.8</b> 实用性写作</a></li>
 <li class="chapter" data-level="2.9" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#对比观点型"><i class="fa fa-check"></i><b>2.9</b> 对比观点型</a></li>
 <li class="chapter" data-level="2.10" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#阐述主题型"><i class="fa fa-check"></i><b>2.10</b> 阐述主题型</a><ul>
@@ -157,7 +161,7 @@
 <div id="header">
 <h1 class="title">English writing for CET6</h1>
 <p class="author"><em>wxhyihuan</em></p>
-<p class="date"><em>2020-12-03</em></p>
+<p class="date"><em>2020-12-04</em></p>
 </div>
 <div id="英语六级作文素材" class="section level1">
 <h1><span class="header-section-number"></span> 英语六级作文素材</h1>
