--- a/英语六级作文模板.html
+++ b/英语六级作文模板.html
@@ -24,7 +24,7 @@
 <meta name="author" content="wxhyihuan" />
 
 
-<meta name="date" content="2020-12-03" />
+<meta name="date" content="2020-12-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -98,7 +98,11 @@
 <li class="chapter" data-level="2.5.3" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#答题型"><i class="fa fa-check"></i><b>2.5.3</b> 答题型</a></li>
 </ul></li>
 <li class="chapter" data-level="2.6" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#问题解决型"><i class="fa fa-check"></i><b>2.6</b> 问题解决型</a></li>
-<li class="chapter" data-level="2.7" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#图表型作文"><i class="fa fa-check"></i><b>2.7</b> 图表型作文</a></li>
+<li class="chapter" data-level="2.7" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#图表型作文"><i class="fa fa-check"></i><b>2.7</b> 图表型作文</a><ul>
+<li class="chapter" data-level="2.7.1" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#模板"><i class="fa fa-check"></i><b>2.7.1</b> 模板</a></li>
+<li class="chapter" data-level="2.7.2" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#范文"><i class="fa fa-check"></i><b>2.7.2</b> 范文</a></li>
+<li class="chapter" data-level="2.7.3" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#常用句型"><i class="fa fa-check"></i><b>2.7.3</b> 常用句型</a></li>
+</ul></li>
 <li class="chapter" data-level="2.8" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#实用性写作"><i class="fa fa-check"></i><b>2.8</b> 实用性写作</a></li>
 <li class="chapter" data-level="2.9" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#对比观点型"><i class="fa fa-check"></i><b>2.9</b> 对比观点型</a></li>
 <li class="chapter" data-level="2.10" data-path="英语六级作文模板.html"><a href="英语六级作文模板.html#阐述主题型"><i class="fa fa-check"></i><b>2.10</b> 阐述主题型</a><ul>
@@ -351,9 +355,78 @@ protects? For one thing , ( 3 ).</p>
 </div>
 <div id="图表型作文" class="section level2">
 <h2><span class="header-section-number">2.7</span> 图表型作文</h2>
-<p>as is shown/indicated/illustrated by the figure/percentage in　the　table(graph/picture/pie/chart), _______作文题目的议题_______ has been on rise/ decrease (goesup/increases/drops/decreases),significantly/dramatically/steadily rising/decreasing from_______ in _______ to _______ in _______. From the sharp/marked decline/ rise in the chart, it goes without saying that _______.</p>
-<p>There are at least two good reasons accounting for _______. On the　one hand, _______. On the other hand,　_______ is due to the fact that _______. In addition, _______ is responsible for _______. Maybe　there are some other reasons to show _______. But it is generally believed　that the above mentioned reasons are commonly convincing.</p>
+<p>这类作文时，注意以下几点：</p>
+<ol style="list-style-type: decimal">
+<li>审题时，除了要把握好图表的表层信息外，还要分析图标的深层含义，如原因、根源、可能的发展趋势等。图表中所提供的说明文字往往是问题的切入点，一定要仔细分析。</li>
+<li>描述数据时要抓住重点，为中心服务，不必面面俱到，切忌毫无目的地罗列图表中的数据。如果数据较多，抓住图表中的极端点（如最大或最小、最多或最少，最好或最差）和基本相同进行描述。</li>
+<li>主题句应明确，最好放在文章的开头，这样会使重点突出，主题明了。</li>
+</ol>
+<div id="模板" class="section level3">
+<h3><span class="header-section-number">2.7.1</span> 模板</h3>
+<p>第1段：概述图表反映的主题思想</p>
+<p>第2段：分析产生的原因</p>
+<p>第3段：展望未来或提出方法或建议</p>
+<p>As is shown/indicated/illustrated by the figure/percentage in　the　table(graph/picture/pie/chart), _______作文题目的议题_______ has been on rise/ decrease (goesup/increases/drops/decreases),significantly/dramatically/steadily rising/decreasing from_______ in _______ to _______ in _______. From the sharp/marked decline/ rise in the chart, it goes without saying that _______.</p>
+<p>There are at least two good reasons accounting for _______. On the　one hand, _______. On the other hand,　_______ is due to the fact that _______. Last but not the least, _______ is responsible for _______. Maybe　there are some other reasons to show _______. But it is generally believed that the above-mentioned reasons are commonly convincing.</p>
 <p>As far as I am concerned, I hold the point of view that _______. I am sure my opinion is both sound and well-grounded.</p>
+</div>
+<div id="范文" class="section level3">
+<h3><span class="header-section-number">2.7.2</span> 范文</h3>
+<p><strong>范文 1</strong></p>
+<p>Using computers has become a common part of peoples’ life. <em>And the tremendous growth of</em>
+student use of computers has always aroused the greatest concern. <em>What impresses us most is the number of</em> hours students spend on computers. In 2002, they spend as many as 14 hours per week on computers.</p>
+<p><strong>The reasons why</strong> computers as widely used are varied. <strong>Among them</strong>, the decreasing price of PC plays an important part. <strong>What ’s more</strong>, the Internet provides college students an amazing world to explore. <strong>For example</strong>, they can get the latest news and make friends conveniently around the world.</p>
+<p>When talking about the disadvantages and problems existing in student use of computers, <strong>I think that</strong> their lack of skills and discipline is what should be paid attention to. <strong>On the one hand</strong>, the lack of skills fails students to make good use of the computer and the Internet. <strong>On the other hand</strong>, their lack of necessary discipline makes some students indulge in computer games and the net world, forgetting their major tasks as college students. <strong>In brief</strong>, there is still a lot to do to help students make good use of computers.</p>
+<p><strong>范文 2</strong></p>
+<p><strong>From these graphs, we can draw a conclusion that</strong>, <em>with the growth of</em> human population, the number of species has decreased rapidly in America, and some species have even vanished from our planet.</p>
+<p><strong>There are numerous reasons accounting for the phenomenon and I would like to explore a few of the most important ones here.</strong> Above all, as the human population grows rapidly, <em>a growing number of</em> people came to live where some wild species have been living. Then these species have to move to other places. Some of them probably can not adapt to the new environment and die. <strong>In addition,</strong> although many people look on the wildlife as their friends, some people may not think so. They catch a lot of wild animals and sell them in order to get more money. <strong>Consequently,</strong> the natural balance and the ecologic environment are destroyed. The clear cutting has become increasingly serious. So some of the wildlife become homeless and extinct.</p>
+<p><em>In order to</em> protect the wildlife, I have some suggestions. <strong>First,</strong> the governments should make laws to prevent them from being caught and killed. <strong>Second,</strong> the governments should educate people to love nature and protect it. <strong>Third,</strong> as for ourselves, we should take practical actions to protect our living environment.</p>
+</div>
+<div id="常用句型" class="section level3">
+<h3><span class="header-section-number">2.7.3</span> 常用句型</h3>
+<ol style="list-style-type: decimal">
+<li><p>图形种类及概述法</p>
+<p>图表类型： table、chart、diagram graph、column chart、pie graph、bar plot</p>
+<p>描述： show、describe、illustrate、can be seen from、clear、apparent、reveal、 represent</p>
+<p>内容： figure、statistic、number、percentage、proportion</p>
+<p>The table/chart diagram/graph shows (that) According to the table/chart diagram/graph</p>
+<p>As (is) shown in the table/chart diagram/graph</p>
+<p>As can be seen from the table/chart/diagram/graph/figures，figures/statistics shows (that)</p>
+<p>It can be seen from the figures/statistics We can see from the figures/statistics</p>
+<p>It is clear from the figures/statistics</p>
+<p>It is apparent from the figures/statistics table/chart/diagram/graph figures (that) table/chart/diagram/graph shows/describes/illustrates how</p></li>
+<li><p>表示逐句增长</p>
+<p>The number of ( ) has grown steadily from to in 2009.</p></li>
+</ol>
+<p>
+           has risen from ().
+</p>
+<p>
+           shows a tendency to increase. Climbed ( ).
+</p>
+<p>
+           shows a tendency to increase. went sharply up soared
+</p>
+<p>
+           shows a tendency to increase. tends to go up/increase
+</p>
+<p>   There was a rapid/sharp/dramatic/gradual/slow increase/rise in the number of ( ) who ( ).</p>
+<p>   The number of ( ) is on the rise/increase.</p>
+<p>   The increase of ( ) has reached to ( ).</p>
+<ol start="3" style="list-style-type: decimal">
+<li><p>表示数据降低</p>
+<p>The number of dropped steadily from to in 2008.</p></li>
+</ol>
+<p>          declined suddenly fell</p>
+<p>          tends to go down tendency to fall</p>
+<p>          shows a tendency to decrease</p>
+<p>
+   There was a sharp fall ( ) in the number of in 2008.
+</p>
+<p>         gradual decrease</p>
+<p>         sudden reduction slow decline</p>
+<p>         drop</p>
+</div>
 </div>
 <div id="实用性写作" class="section level2">
 <h2><span class="header-section-number">2.8</span> 实用性写作</h2>
